--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "author": "Philipp Kewisch",
   "browser_specific_settings": {
     "gecko": {
-      "id": "quickmove@mozilla.kewis.ch",
+      "id": "quickmove_extended@mozilla.kewis.ch",
       "strict_min_version": "128.0",
       "strict_max_version": "136.*"
     }
