--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,7 +33,8 @@
     "messagesMove",
     "messagesTags",
     "messagesTagsList",
-    "messagesUpdate"
+    "messagesUpdate",
+    "notifications"
   ],
   "browser_action": {
     "default_icon": "images/addon.svg",
