--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,7 +25,6 @@
     "type": "module"
   },
 
-
   "permissions": [
     "storage",
     "accountsRead",
@@ -33,9 +32,13 @@
     "messagesMove",
     "messagesTags",
     "messagesTagsList",
-    "messagesUpdate",
+    "messagesUpdate"
+  ],
+
+  "optional_permissions": [
     "notifications"
   ],
+
   "browser_action": {
     "default_icon": "images/addon.svg",
     "default_popup": "popup/popup.html?action=move&allowed=move,copy,goto,tag",
